--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@ title: Silent Milk - Home Page
 description: Every great website starts with a great homepage. The homepage tells your viewers what your site is all about and gives your viewers a place to come back to.
 sitemap:
     priority: 1.0
-    lastmod: 2017-11-02
-    changefreq: weekly
+    lastmod: 2018-07-10
 ---
 <!DOCTYPE HTML>
 <!--
@@ -28,12 +27,7 @@ sitemap:
 				<!-- Intro -->
 					<div id="intro">
             <h1>{{site.title}}</h1>
-						<h2>The Jekyll Theme Version</h2>
-						<p>Massively is an HTML5 website theme designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>. Jekyll integration by <a href="https://somiibo.com">Somiibo</a></p>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
+						<p>Our lives begin to end the day we become silent about the things that matter – Martin Luther King, Jr.</p>
 					</div>
 
 				<!-- Header -->
