--- a/elements.html
+++ b/elements.html
@@ -75,7 +75,7 @@ sitemap:
 				<li>Just kidding that last one was the third.</li>
 			</ol>
 
-			<h3>Icons</h3>
+			<!-- <h3>Icons</h3>
 			<ul class="icons">
 				<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -89,7 +89,7 @@ sitemap:
 				<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 				<li><a href="#" class="icon alt fa-github"><span class="label">Github</span></a></li>
 				<li><a href="#" class="icon alt fa-dribbble"><span class="label">Dribbble</span></a></li>
-			</ul>
+			</ul> -->
 
 		</div>
 	</div>
